--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "isomorphic-dompurify": "^2.16.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
