--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "isomorphic-dompurify": "^2.16.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
-    "next": "14.2.11",
+    "next": "^14.2.22",
     "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
